# website-template

./: .env  .gitignore  README.md  hooks.py  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/mkdocs-edu/: pyproject.toml
.devcontainer/scripts/: serve
.github/: dependabot.yml
.github/actions/mkdocs-edu/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: website.yml
config/: base.yml  hooks.py  main.py  mkdocs.yml
docs/: index.md  pages.j2  todo.md
docs/assignments/: assignment1.md  assignment2.md  assignment3.md  index.md  pages.j2
docs/documentation/: index.md  pages.j2
docs/lecture/: index.md  pages.j2
docs/organisation/: pages.j2
overrides/partials/: source-file.html
overrides/stylesheets/: extra.css
