[tool.poetry]
name = "mkdocs-edu"
version = "0.1.1"
description = "mkdocs for education web site"
authors = ["Jacques Supcik <jacques.supcik@hefr.ch>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mkdocs = "^1.3.0"
mkdocs-material = "^8.5.11"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-simple-hooks = "^0.1.5"
mkdocs-static-i18n = "^0.53"
python-markdown-math = "^0.8"
mkdocs-minify-plugin = "^0.6.2"
mkdocs-include-markdown-plugin = "^4.0.3"
python-markdown-comments = {git = "https://github.com/ryneeverett/python-markdown-comments.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"